@@ -6,6 +6,12 @@ class TaskSetupperBase (object):
     def __init__(self,taskBufferIF,ddmIF):
         self.ddmIF = ddmIF
         self.taskBufferIF = taskBufferIF
+        self.refresh()
+
+
+
+    def refresh(self):
+        self.siteMapper = self.taskBufferIF.getSiteMapper()
 
 
 
